--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
-
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
         <title>Citas Discret@s</title>
-		<meta content='https://i.postimg.cc/YqM5Dd0k/Screenshot-685.png' property='og:image'/>
+		<meta content='https://raw.githubusercontent.com/ganaremoslarifa/sturdy-octo-potato/f9008d09eedfa958f0e912dd139baabc621fd546/a2.png' property='og:image'/>
 		<script id="_waunyo">var _wau = _wau || []; _wau.push(["dynamic", "magia", "nyo", "000000000000", "small"]);</script><script async src="//waust.at/d.js"></script>
         <meta name="viewport" content="user-scalable=false, initial-scale=1.0, maximum-scale=1.0">
         <link href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" rel="icon" type="image/x-icon" />
